# babyswarm

./: .gitignore  LICENSE  README.md  hello.py  pyproject.toml
logs/: idea1-breakout1.json
process/: biblio-old.txt  diary.txt  prd-old.txt  prd.txt
state/: 00621b8-state.json  02bbd61-state.json  03881f6-state.json  043bd97-state.json  061bb4d-state.json  07a7c46-state.json  0bc8d8d-state.json  0d9c46d-state.json  0e16148-state.json  0e99419-state.json  1196c50-state.json  13394f8-state.json  145a985-state.json  16e200b-state.json  1a8ade7-state.json  1b25615-state.json  21676bb-state.json  228cd46-state.json  22bbd9b-state.json  22ee013-state.json  270b9f0-state.json  28358e7-state.json  28ae4bb-state.json  2c93224-state.json  2d0b578-state.json  2e74a2f-state.json  37c6590-state.json  3978311-state.json  39b53b3-state.json  3a31e39-state.json  3ae1027-state.json  419e277-state.json  476bb5f-state.json  47cc5fd-state.json  4a50d6b-state.json  4af435a-state.json  4b1b241-state.json  4d21c60-state.json  51781ca-state.json  539cc3e-state.json  (+54 more)
structure/: __main__.py  abstract.py  gen_operators.py  letta.py  main.py  operators.py  state.py  tool_poc.py  tools.py
structure/operators/: employees.py  historical.py  judges.py
structure/scripts/: gen_operators.py  generate_ideas.py  judge_hackathon_idea.py
structure/tools/: poc.py
